add category chart